<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">From Angel</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="url_home">https://google.com</string>

    <!-- Button -->
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_active">Active</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_filter">Filter</string>
    <string name="btn_close">Close</string>
    <string name="btn_agreed">Agreed</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_add">Add</string>
    <string name="btn_no">No</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_save">Save</string>
    <string name="btn_back">Back</string>
    <string name="btn_next">Next</string>
    <string name="btn_skip">Skip</string>
    <string name="btn_done">Done</string>
    <string name="btn_return">Return</string>
    <string name="btn_ok">OK</string>

    <!-- Setting Screen -->
    <string name="title_settings">1.Setting</string>
    <string name="settings">Setting</string>
    <string name="user_settings">(1) USER SETTING</string>
    <string name="own_name">Own Name:</string>
    <string name="mail_address">Mail Address</string>
    <string name="tel_no">Tel No.(Optional):</string>
    <string name="validate_interval">(2) Validate Interval</string>
    <string name="days_after">Days after</string>
    <string name="safety_was_verified">Safety was verified</string>
    <string name="alarm_setting">Alarm setting</string>
    <string name="alarm_setting2">(3) Alarm setting</string>
    <string name="sound">Sound</string>
    <string name="vibrate">Vibrate</string>

    <!-- Messsage setting -->
    <string name="title_messsage_setting">2.Message Setting</string>
    <string name="messsage_setting">Message Setting</string>
    <string name="send_details">(1)Send Details</string>
    <string name="mail">Mail:</string>
    <string name="address">Address:</string>
    <string name="message">Message:</string>
    <string name="service3">(2)Service </string>
    <string name="mrms">Mr/Ms </string>
    <string name="safety_validation">Safety Validation </string>
    <string name="please_check_the_notice">*Please check the notice mail from server after start/stop</string>
    <string name="please_reply_by_press_ok">Please reply by pressing (OK) if there\'s a problem</string>
    <string name="please_reply_by_press_close">Please press close if the Safety Validation is NG if you\'re not the person</string>
    <string name="message1">1.Setting</string>
    <string name="message2">2.Message</string>
    <string name="help">Help</string>
    <string name="safetyvalidation3">3.Validation</string>
    <string name="plz_input_required_field">Please input required fields to continue !</string>
    <string name="incorrect_email_address">Incorrect email address !</string>
    <string name="failed_to_conect_server">Failure to send Setting Information to the server</string>
    <string name="duplicated_email">Email is already used</string>
    <string name="email_not_validate">Email is invalidate</string>
    <string name="change_info_sucess">Change information successfully!</string>
    <string name="setting_user_first">Setting for user first</string>
    <string name="sucess">Successfully</string>
    <string name="ok">OK!</string>
    <string name="ng">NG!</string>
    <string name="final_validation">Final Validation</string>
    <string name="next_validation">Next Validation</string>
    <string name="msg_stop_service">Since Mr/Ms %s has not taken 2 consecutive Safety Validation, a message will be sent to Mr/Ms A.\nIn Addition,message may not be receiver due to sending condition and receiver incoming rejection settings, etc.</string>
    <string name="message_paid_expired">You payment is expired, do you want to continue to use it?</string>
    <string name="message_paid_not_paid">You will be charge to use this function. Are you sure?</string>
    <string name="term_of_use"><a href="http://google.com">I read and agreed the policy</a></string>
    <string name="error_email">Example: john@gmail.com,...</string>
    <string name="error_name">Example: John,...</string>
    <string name="error_message">Example: I am going to travel at weekend.</string>
    <string name="error_phone">Example: (+84)973378373</string>
    <string name="name_validate">Safety Validation</string>
    <string name="mr_ms_name">Mr/Ms %s</string>
    <string name="network_unvailable">Network is unavailable</string>
    <string name="user_email"><a href="http://google.com">ga@angelsmails.com</a></string>
    <string name="title_reminder">Reminder Message</string>
    <string name="start_success">Start Successfully</string>
    <string name="stop_success">Stop Successfully</string>
    <string name="hint_date">yyyy-mm-dd</string>
    <string name="hint_time">hh:mm</string>
    <string name="txt_Of">の</string>

</resources>