<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_validation"
    android:orientation="vertical"
    android:padding="5dp" >

    <LinearLayout
        android:id="@+id/text_name"
        style="@style/layoutfullwidth_vertical"
        android:layout_alignParentTop="true" >

        <TextView
            android:id="@+id/lblMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/mr_ms_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_name"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/confirmed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/confirmed"
            android:textStyle=""
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/lblGuideOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/please_reply_by_press_ok"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <Button
            android:id="@+id/btnOk"
            android:layout_width="160dp"
            android:layout_height="75dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/ok_btn"
            android:gravity="center_horizontal"
            android:onClick="onOKClick" />

        <TextView
            android:id="@+id/lblGuideClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:text="@string/please_reply_by_press_close"
            android:textColor="@color/black"
            android:textSize="15sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="100dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/close_btn"
        android:onClick="onCancelClick" />

</RelativeLayout>