<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/layoutHeader"
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/bg_setting_screen" >

        <com.lemon.fromangle.utility.AutoBGButton
            android:id="@+id/btnHome"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="5dp"
            android:background="@drawable/btn_link_to_web"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/layoutHeader"
        android:background="@drawable/bg_top_screen"
        android:padding="10dp" >

        <LinearLayout
            android:id="@+id/layoutTopStatus"
            android:layout_width="180dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="90dp"
            android:gravity="center_horizontal" >

            <ImageView
                android:id="@+id/imgTopStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/bg_start" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutLastValidationDate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layoutTopStatus"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:text="@string/final_validation"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/txtFinalValidation"
                android:layout_width="150dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:focusable="false"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/lblStatusFinalValidate"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:enabled="false"
                android:gravity="center"
                android:text="---"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutNextValidationDate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layoutLastValidationDate"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:text="@string/next_validation"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/txtNextValidation"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:focusable="false"
                android:gravity="center"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/lblStatusNextValidate"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="---"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/layoutSetting"
                style="@style/layout_action" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <ImageView
                        style="@style/img_icon_top"
                        android:src="@drawable/ic_setting" />

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/message1" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/imgMessageStatus"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/bar_grey" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutMessageSetting"
                style="@style/layout_action" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <ImageView
                        style="@style/img_icon_top"
                        android:src="@drawable/ic_message" />

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/message2" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/imgMessageSettingStatus"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/bar_grey" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutValidate"
                style="@style/layout_action" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <ImageView
                        style="@style/img_icon_top"
                        android:src="@drawable/ic_notify" />

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/safetyvalidation3" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/imgValidateStatus"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/bar_grey" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>